# Plaud-Sync

./: .gitignore  CHANGELOG.md  INSTALL.txt  README.md  build-installer.sh  package-lock.json  package.json  sign-build-local.sh
.github/workflows/: build-plaud-sync.yml  release-plaud-sync.yml
docs/: GUIDE-plaud-sync-updater-signing.md  GUIDE-plaud-sync-windows-release.md  INVESTIGATE-windows-loop.md  PLAN-feedback-2026-07-16.md  PLAN-hidock-plaud-empty-recordings-2026-06-15.md  PLAN-mlx-crash-and-plaud-token-refresh-2026-06-10.md  PLAN-plaud-apple-sso-2026-06-11.md  PLAN-plaud-sync-auto-update-2026-06-10.md  PLAN-plaud-sync-code-review-2026-06-08.md  PLAN-plaud-sync-login-hang-and-autosync-2026-06-10.md  PLAN-plaud-sync-refinements-2026-06-08.md  PLAN-plaud-sync-region-and-headers-2026-06-11.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: browser-login.json  default.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: sign_windows.py
src-tauri/src/: app_types.rs  browser_login.rs  commands.rs  lib.rs  login_log.rs  main.rs  state.rs  storage.rs  sync.rs
src-tauri/src/plaud/: auth.rs  client.rs  mod.rs  types.rs
src-tauri/src/transcription/: audio.rs  mod.rs  model_store.rs
src/lib/: api.ts  types.ts  updater.ts  utils.ts
src/lib/components/: LoginView.svelte  SettingsView.svelte  SyncView.svelte
src/routes/: +page.svelte
