[package]
name = "plaud-sync"
version = "0.2.0"
description = "Download Plaud recordings locally"
authors = ["James Whiting"]
edition = "2021"

[lib]
name = "plaud_sync_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
keyring = "3"
dirs = "6"
open = "5"

# macOS-only: close the orphaned OAuth provider popup (e.g. Google's account
# chooser) that WebKit won't close via JavaScript. Raw AppKit window sweep.
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
